--- a/app/partials/clientDashboard.html
+++ b/app/partials/clientDashboard.html
@@ -20,9 +20,8 @@
             </div>
 
             <div class="col-md-12 acenter pt50">
-              <img src="http://img.fxw.io/email/flexwork-bb-8.png" alt="BB-8" title="BB-8" width="69" height="92">
+              <img src="img/flexy@2.png" alt="flexy" title="flexy" width="160" height="119 ">
             </div>
-
 
           </div>
       </div>
@@ -45,12 +44,12 @@
                     <div class="form-group mb0">
                         <select data-placeholder="Select Technologies" select-two class="chosen-select" multiple style="width:100%;" tabindex="2" ng-model="projectskills_dash">
                             <option ng-repeat="skill in skills" value="{{skill}}">{{skill}} </option>
-                            
+
                         </select>
                     </div>
-                    
-                   
-                       
+
+
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
@@ -58,6 +57,6 @@
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
 </div>
 <!--end wrapper-->
