--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -174,10 +174,10 @@
                                                 <table class="table table-hover">
                                                     <thead>
                                                       <tr>
-                                                          <td width="400" class="table-head">{{date.date}}</td>
-                                                          <td width="800" class="table-head realt-time"></td>
-                                                          <td width="150" class="table-head realt-time"><i class="fa fa-clock-o"> {{date.totalestimatedhours}} h</td>
-                                                          <td width="150" class="table-head realt-time"><i class="fa fa-clock-o"></i> {{date.totalhours}} h</td>
+                                                          <td width="400" class="project-table-head">{{date.date}}</td>
+                                                          <td width="800" class="project-table-head aright realt-time"></td>
+                                                          <td width="150" class="project-table-head aright realt-time"><i class="fa fa-clock-o"></i> {{date.totalestimatedhours}} h</td>
+                                                          <td width="150" class="project-table-head aright realt-time"><i class="fa fa-clock-o"></i> {{date.totalhours}} h</td>
                                                       </tr>
                                                     </thead>
                                                     <tbody>
@@ -213,17 +213,17 @@
                                                 <table class="table table-hover" >
                                                     <thead>
                                                       <tr>
-                                                          <td width="600" class="table-head">{{ticket.title}}</td>
-                                                          <td width="300" class="table-head">
+                                                          <td width="600" class="project-table-head">{{ticket.title}}</td>
+                                                          <td width="300" class="project-table-head">
                                                             {{ticket.status}} /
                                                             <span ng-if="ticket.open">not billed</span>
                                                             <span ng-if="ticket.billed && !ticket.payed">billed</span>
                                                             <span ng-if="ticket.payed">payed</span>
                                                           </td>
 
-                                                          <td width="150" class="table-head realt-time"><i class="fa fa-clock-o"></i> {{ticket.totalestimatedhours}} h</td>
-                                                          <td width="150" class="table-head realt-time"><i class="fa fa-clock-o"></i> {{ticket.totalhours}} h</td>
-                                                          <td width="150" class="table-head realt-time"><i class="fa fa-clock-o"></i> {{ticket.btime}} h</td>
+                                                          <td width="150" class="project-table-head aright realt-time"><i class="fa fa-clock-o"></i> {{ticket.totalestimatedhours}} h</td>
+                                                          <td width="150" class="project-table-head aright realt-time"><i class="fa fa-clock-o"></i> {{ticket.totalhours}} h</td>
+                                                          <td width="150" class="project-table-head aright realt-time"><i class="fa fa-clock-o"></i> {{ticket.btime}} h</td>
                                                       </tr>
                                                     </thead>
                                                     <tbody>
