--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -29,52 +29,14 @@
                       <!-- buttons & team -->
                       <div class="row mb20">
                           <div class="col-md-6">
-                            <div class="select-month m0" style="width: 225px;">
-                                <select class="select2" id="selectedmonth" ng-click="changeDate()">
-                                <option value="0" >Select Customer</option>
-                                <option value="1">flexwork.io</option>
-                                <option value="2">Meng GmbH</option>
-                                <option value="3">Mercury Ltd. </option>
-                                <option value="4">mindfacture gmbh &amp; co. kg </option>
-                                <option value="5">easykfz.com</option>
-                                <option value="6">FLP Consulting AG</option>
-                                <option value="7">Consolidate Software GmbH &amp; Co KG </option>
-                                <option value="8" selected="">navabi GmbH</option>
-                                <option value="9">Big Data Labs Ltd. Şti </option>
-                                <option value="10">SHOPMACHER eCommerce GmbH &amp; Co. KG </option>
-                                <option value="11">eetmee GmbH</option>
-                                <option value="12">bam! interactive marketing GmbH</option>
-                                <option value="13">antwerpes ag </option>
-                                <option value="14">intomedia GmbH</option>
-                                <option value="15">helllicht medien GmbH</option>
-                                <option value="16">Dr. Gerdewal Consulting </option>
-                                <option value="17">STR8 GmbH &amp; Co. KG </option>
-                                <option value="18">B&amp;B. Markenagentur GmbH </option>
-                                <option value="19">zweibusch GbR</option>
-                                <option value="20">Atfront AG</option>
-                                <option value="21">taste! digital communication GmbH </option>
-                                <option value="22">greatcontent AG</option>
-                                <option value="23">BET Büro für Energiewirtschaft und technische Planung GmbH </option>
-                                <option value="24">S.WERK AG </option>
-                                <option value="25">Grafikdesignstudio Torben Kania e.U. </option>
-                                <option value="26">Teamprove GmbH</option>
-                                <option value="27">allthirds GbR</option>
-                                <option value="28">PTnC UG</option>
-                                <option value="29">Bright Solutions GmbH</option>
-                                <option value="30">IOVAVUM Business Software GmbH</option>
-                                <option value="31">brandung GmbH &amp; Co. KG</option>
-                                <option value="32">Werbeagentur - Colak &amp; Partner </option>
-                                <option value="33">Netstack GbR</option>
+                            <div class="select-month m0 mr10" style="width: 225px;" ng-if="showClients">
+                                <select select-two id="selectedClient" ng-change="loadByClient()" ng-model="filterData.selectedclient" initText="{{filterData.selectedclient.companyname}}" ng-options="client as client.companyname for client in clients track by client.id">
                                 </select>
                             </div>
-                            <div class="select-month m0 ml10" style="width: 225px;">
-                                <select class="select2" id="selectedmonth" ng-click="changeDate()">
-                                <option value="0" >Select Project</option>
-                                <option value="1">navabi ux tests</option>
-                                <option value="2">Responsive LPs</option>
+                            <div class="select-month m0 ml0" style="width: 225px;">
+                                <select  select-two id="selectedproject" ng-change="LoadByProject()" initText="{{project_name}}" ng-model="filterData.selectedproject" ng-if="showProjects" ng-options="project as project.name for project in projects track by project.id">
                                 </select>
                             </div>
-                            <button type="button" class="btn btn-white btn-sm btn-right" ng-click=""><i class="fa fa-arrow-right"></i></button>
                           </div>
                           <div class="col-md-6 aright">
                               <div class="btn-group">
@@ -111,8 +73,9 @@
                                                   </select>
                                               </div>
                                               <div class="select-year">
-                                                  <select class="select2" id="selectedyear">
-                                                    <option value="2016" selected="selected">2016</option>
+                                                  <select class="select2" id="selectedyear" ng-click="changeDate()">
+                                                    <option value="2017" selected="selected">2017</option>
+                                                    <option value="2016">2016</option>
                                                     <option value="2015">2015</option>
                                                     <option value="2014">2014</option>
                                                     <option value="2013">2013</option>
