--- a/app/partials/adminInvoice.html
+++ b/app/partials/adminInvoice.html
@@ -36,65 +36,43 @@
                                      <h2><i class="fa fa-minus-square-o mr5"></i> Not Billed</h2>
 
                                      <!-- bill-box-->
-                                      <div class="bill-box">
+                                      <div class="bill-box" ng-repeat="unbilled in unpaidTickets">
                                         <div class="bill-info">
                                           <div class="bill-title">
-                                            <span class="projectname">Responsive LPs</span>
-                                            <span class="clientname">navabi GmbH</span>
+                                            <span class="projectname">{{unbilled.project_name}}</span>
+                                            <span class="clientname">{{unbilled.company_name}}</span>
                                           </div>
-                                          <div class="bill-date">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></div>
+                                          <div class="bill-date">{{unbilled.creation_date}} <i class="fa fa-long-arrow-right ml5"></i></div>
                                         </div>
                                         <div class="bill-times">
                                           <div class="bill-estimation">
                                             <span class="est">EST</span>
-                                            <span class="esthours">27.5 h</span>
+                                            <span class="esthours">{{unbilled.estimation}} h</span>
                                           </div>
                                           <div class="bill-realtime">
                                             <span class="rt">RT</span>
-                                            <span class="rthours">30 h</span>
+                                            <span class="rthours">{{unbilled.realtime}} h</span>
                                           </div>
-                                          <div class="bill-billabletime">
+                                          <div class="bill-realtime">
                                             <span class="bt">BT</span>
-                                            <span class="bthours">27.5 h</span>
+                                            <span class="bthours">{{unbilled.billed_time}} h</span>
+                                          </div>
+                                           <div class="bill-billabletime">
+                                            <span class="bt">Amount</span>
+                                            <span class="bthours">{{unbilled.ammount}} {{unbilled.currency}}</span>
                                           </div>
                                         </div>
                                         <div class="bill-btn">
-                                          <a href="#" class="btn btn-white btn-sm mr5"><i class="fa fa-search"></i></a>
-                                          <a href="#" class="btn btn-danger btn-sm"><i class="fa fa-arrow-right mr5"></i> bill</a>
+                                          <a href="#/invoice/report/project/{{unbilled.project_id}}" class="btn btn-white btn-sm mr5"><i class="fa fa-search"></i></a>
+                                          <a ng-click="createInvoice(unbilled.project_id,$index)" class="btn btn-danger btn-sm"><i class="fa fa-arrow-right mr5"></i> bill</a>
                                         </div>
                                       </div>
                                       <!-- bill-box-->
-
-                                      <!-- bill-box-->
-                                       <div class="bill-box">
-                                         <div class="bill-info">
-                                           <div class="bill-title">
-                                             <span class="projectname">Responsive LPs</span>
-                                             <span class="clientname">navabi GmbH</span>
-                                           </div>
-                                           <div class="bill-date">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></div>
-                                         </div>
-                                         <div class="bill-times">
-                                           <div class="bill-estimation">
-                                             <span class="est">EST</span>
-                                             <span class="esthours">27.5 h</span>
-                                           </div>
-                                           <div class="bill-realtime">
-                                             <span class="rt">RT</span>
-                                             <span class="rthours">30 h</span>
-                                           </div>
-                                           <div class="bill-billabletime">
-                                             <span class="bt">BT</span>
-                                             <span class="bthours">27.5 h</span>
-                                           </div>
-                                         </div>
-                                         <div class="bill-btn">
-                                           <a href="#" class="btn btn-white btn-sm mr5"><i class="fa fa-search"></i></a>
-                                           <a href="#" class="btn btn-danger btn-sm"><i class="fa fa-arrow-right mr5"></i> bill</a>
-                                         </div>
-                                       </div>
-                                       <!-- bill-box-->
-
+                                       <!-- loader -->
+                                        <div class="laoder mb20" ng-if='!listLoaded'>
+                                          <img src="img/ring.gif" height="40" width="40">
+                                        </div>
+                                        <!--// loader -->
                                    </div>
                                  </div>
                                  <!--// not billed -->
@@ -105,36 +83,36 @@
                                      <h2><i class="fa fa-sign-out mr5"></i> Billed</h2>
 
                                      <!-- bill-box-->
-                                      <div class="bill-box">
+                                      <div class="bill-box" ng-repeat="unpaid in unpaidInvoices">
                                         <div class="bill-info">
                                           <div class="bill-title">
-                                            <span class="projectname">Responsive LPs</span>
-                                            <span class="clientname">navabi GmbH</span>
+                                            <span class="projectname">{{unpaid.project_name}}</span>
+                                            <span class="clientname">{{unpaid.company_name}}</span>
                                           </div>
-                                          <div class="bill-date">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></div>
+                                          <div class="bill-date">{{unpaid.creation_date}} <i class="fa fa-long-arrow-right ml5"></i></div>
                                         </div>
                                         <div class="bill-times">
-                                          <div class="bill-estimation">
-                                            <span class="est">EST</span>
-                                            <span class="esthours">27.5 h</span>
-                                          </div>
                                           <div class="bill-realtime">
-                                            <span class="rt">RT</span>
-                                            <span class="rthours">30 h</span>
+                                            <span class="rt">BT</span>
+                                            <span class="rthours">{{unpaid.billed_time}} h</span>
                                           </div>
                                           <div class="bill-billabletime">
-                                            <span class="bt">BT</span>
-                                            <span class="bthours">27.5 h</span>
+                                            <span class="bt">Amount</span>
+                                            <span class="bthours">{{unpaid.ammount}} {{unpaid.currency}}</span>
                                           </div>
                                         </div>
                                         <div class="bill-btn">
-                                          <a href="#" class="btn btn-white btn-sm mr5">report</a>
-                                          <a href="#" class="btn btn-white btn-sm mr5">invoice</a>
-                                          <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-arrow-right mr5"></i> paid</a>
+                                          <a href="#/invoice/report/invoice/{{unpaid.id}}" class="btn btn-white btn-sm mr5">report</a>
+                                          <a href="#/invoicedetails/{{unpaid.id}}" class="btn btn-white btn-sm mr5">invoice</a>
+                                          <a ng-click = "payInvoice(unpaid.id,$index)" class="btn btn-primary btn-sm"><i class="fa fa-arrow-right mr5"></i> paid</a>
                                         </div>
                                       </div>
                                       <!-- bill-box-->
-
+                                       <!-- loader -->
+                                        <div class="laoder mb20" ng-if='!listLoaded'>
+                                          <img src="img/ring.gif" height="40" width="40">
+                                        </div>
+                                        <!--// loader -->
                                    </div>
                                  </div>
                                  <!--// billed -->
@@ -152,67 +130,32 @@
                                      </div>
 
                                      <!-- bill-box-->
-                                      <div class="bill-box">
+                                     <div class="bill-box" ng-repeat="unpaid in paidInvoices">
                                         <div class="bill-info">
                                           <div class="bill-title">
-                                            <span class="projectname">Responsive LPs</span>
-                                            <span class="clientname">navabi GmbH</span>
+                                            <span class="projectname">{{unpaid.project_name}}</span>
+                                            <span class="clientname">{{unpaid.company_name}}</span>
                                           </div>
-                                          <div class="bill-date">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></div>
+                                          <div class="bill-date">{{unpaid.creation_date}} <i class="fa fa-long-arrow-right ml5"></i></div>
                                         </div>
                                         <div class="bill-times">
-                                          <div class="bill-estimation">
-                                            <span class="est">EST</span>
-                                            <span class="esthours">27.5 h</span>
-                                          </div>
                                           <div class="bill-realtime">
-                                            <span class="rt">RT</span>
-                                            <span class="rthours">30 h</span>
+                                            <span class="rt">BT</span>
+                                            <span class="rthours">{{unpaid.billed_time}} h</span>
                                           </div>
                                           <div class="bill-billabletime">
-                                            <span class="bt">BT</span>
-                                            <span class="bthours">27.5 h</span>
+                                            <span class="bt">Amount</span>
+                                            <span class="bthours">{{unpaid.ammount}} {{unpaid.currency}}</span>
                                           </div>
                                         </div>
                                         <div class="bill-btn">
-                                          <a href="#" class="btn btn-white btn-sm mr5">report</a>
-                                          <a href="#" class="btn btn-white btn-sm">invoice</a>
+                                          <a href="#/invoice/report/invoice/{{unpaid.id}}" class="btn btn-white btn-sm mr5">report</a>
+                                          <a href="#/invoicedetails/{{unpaid.id}}" class="btn btn-white btn-sm">invoice</a>
                                         </div>
                                       </div>
                                       <!-- bill-box-->
-
-                                      <!-- bill-box-->
-                                       <div class="bill-box">
-                                         <div class="bill-info">
-                                           <div class="bill-title">
-                                             <span class="projectname">Responsive LPs</span>
-                                             <span class="clientname">navabi GmbH</span>
-                                           </div>
-                                           <div class="bill-date">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></div>
-                                         </div>
-                                         <div class="bill-times">
-                                           <div class="bill-estimation">
-                                             <span class="est">EST</span>
-                                             <span class="esthours">27.5 h</span>
-                                           </div>
-                                           <div class="bill-realtime">
-                                             <span class="rt">RT</span>
-                                             <span class="rthours">30 h</span>
-                                           </div>
-                                           <div class="bill-billabletime">
-                                             <span class="bt">BT</span>
-                                             <span class="bthours">27.5 h</span>
-                                           </div>
-                                         </div>
-                                         <div class="bill-btn">
-                                           <a href="#" class="btn btn-white btn-sm mr5">report</a>
-                                           <a href="#" class="btn btn-white btn-sm">invoice</a>
-                                         </div>
-                                       </div>
-                                       <!-- bill-box-->
-
                                        <!-- loader -->
-                                        <div class="laoder mb20">
+                                        <div class="laoder mb20" ng-if='!listLoaded'>
                                           <img src="img/ring.gif" height="40" width="40">
                                         </div>
                                         <!--// loader -->
