--- a/app/partials/adminInvoicePaids.html
+++ b/app/partials/adminInvoicePaids.html
@@ -11,9 +11,6 @@
                    <h2><i class="fa fa-check-square-o"></i> Invoice Paids</h2>
                    <ol class="breadcrumb">
                        <li>
-                           {{project_name}}
-                       </li>
-                       <li>
                            Invoice
                        </li>
                        <li>
@@ -39,7 +36,7 @@
                                          <div class="calander f-left  m0 mr10">
                                            <div class="select-icon-calander"><i class="fa fa-calendar"></i></div>
                                            <div class="select-month">
-                                               <select class="select2" id="selectedmonth" ng-click="changeDate()">
+                                               <select select-two id="selectedmonth" ng-change="changeDate()" ng-model="month">
                                                <option value="1">january</option>
                                                <option value="2">february</option>
                                                <option value="3">march</option>
@@ -51,12 +48,13 @@
                                                <option value="9">september</option>
                                                <option value="10">october</option>
                                                <option value="11">november</option>
-                                               <option value="12" selected="selected">december</option>
+                                               <option value="12">december</option>
                                                </select>
                                            </div>
                                            <div class="select-year">
-                                               <select class="select2" id="selectedyear">
-                                                 <option value="2016" selected="selected">2016</option>
+                                               <select select-two id="selectedyear" ng-model="year" ng-change="changeDate()">
+                                                <option value="2017" selected="selected">2017</option>
+                                                 <option value="2016">2016</option>
                                                  <option value="2015">2015</option>
                                                  <option value="2014">2014</option>
                                                  <option value="2013">2013</option>
@@ -84,97 +82,33 @@
                                                        <td width="220" class="project-table-head">Project Name</td>
                                                        <td width="250" class="project-table-head">Client</td>
                                                        <td width="150" class="project-table-head">Date</td>
-                                                       <td width="150" class="project-table-head">EST | RT | BT</td>
+                                                       <td width="150" class="project-table-head">BT | Amount</td>
                                                        <td width="200" class="project-table-head aright"></td>
                                                    </tr>
 
-                                                   <tr>
+                                                   <tr ng-repeat="invoice in allInvoices">
                                                        <td class="project-id">
-                                                           00101022
+                                                           {{invoice.id}}
                                                        </td>
                                                        <td class="project-title">
-                                                           Responsive LPs
+                                                           {{invoice.project_name}}
                                                        </td>
                                                        <td class="project-company">
-                                                          navabi GmbH
+                                                          {{invoice.client}}
                                                        </td>
                                                        <td class="project-title">
-                                                           <a href="#/invoicedetails">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></a>
+                                                           <a href="#/invoicedetails">{{invoice.date}} <i class="fa fa-long-arrow-right ml5"></i></a>
                                                        </td>
                                                        <td class="project-estimation">
-                                                          <span class="estrt">27.5 h | 30 h |</span> <span class="bt">27.5 h</span>
+                                                          <span class="estrt">{{invoice.billed_time}} h</span> <span class="bt"> | {{invoice.amount}} {{invoice.currency}}</span>
                                                        </td>
                                                        <td class="project-actions">
-                                                         <a href="#" class="btn btn-white btn-sm mr5">report</a>
-                                                         <a href="#" class="btn btn-white btn-sm">invoice</a>
+                                                         <a href="#/invoice/report/invoice/{{invoice.id}}" class="btn btn-white btn-sm mr5">report</a>
+                                                         <a href="#/invoicedetails/{{invoice.id}}" class="btn btn-white btn-sm">invoice</a>
                                                        </td>
                                                    </tr>
 
-                                                   <tr>
-                                                       <td class="project-id">
-                                                           00101022
-                                                       </td>
-                                                       <td class="project-title">
-                                                           Responsive LPs
-                                                       </td>
-                                                       <td class="project-company">
-                                                          navabi GmbH
-                                                       </td>
-                                                       <td class="project-title">
-                                                           <a href="#/invoicedetails">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></a>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <span class="estrt">27.5 h | 30 h |</span> <span class="bt">27.5 h</span>
-                                                       </td>
-                                                       <td class="project-actions">
-                                                         <a href="#" class="btn btn-white btn-sm mr5">report</a>
-                                                         <a href="#" class="btn btn-white btn-sm">invoice</a>
-                                                       </td>
-                                                   </tr>
-
-                                                   <tr>
-                                                       <td class="project-id">
-                                                           00101022
-                                                       </td>
-                                                       <td class="project-title">
-                                                           Responsive LPs
-                                                       </td>
-                                                       <td class="project-company">
-                                                          navabi GmbH
-                                                       </td>
-                                                       <td class="project-title">
-                                                           <a href="#/invoicedetails">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></a>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <span class="estrt">27.5 h | 30 h |</span> <span class="bt">27.5 h</span>
-                                                       </td>
-                                                       <td class="project-actions">
-                                                         <a href="#" class="btn btn-white btn-sm mr5">report</a>
-                                                         <a href="#" class="btn btn-white btn-sm">invoice</a>
-                                                       </td>
-                                                   </tr>
-
-                                                   <tr>
-                                                       <td class="project-id">
-                                                           00101022
-                                                       </td>
-                                                       <td class="project-title">
-                                                           Responsive LPs
-                                                       </td>
-                                                       <td class="project-company">
-                                                          navabi GmbH
-                                                       </td>
-                                                       <td class="project-title">
-                                                           <a href="#/invoicedetails">15.12.2016 <i class="fa fa-long-arrow-right ml5"></i></a>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <span class="estrt">27.5 h | 30 h |</span> <span class="bt">27.5 h</span>
-                                                       </td>
-                                                       <td class="project-actions">
-                                                         <a href="#" class="btn btn-white btn-sm mr5">report</a>
-                                                         <a href="#" class="btn btn-white btn-sm">invoice</a>
-                                                       </td>
-                                                   </tr>
+                                                   
 
 
 
