--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -127,7 +127,7 @@
                                                         </td>
 
                                                         <td class="project-status">
-                                                            <span class="rate" ng-if="project.rate!=null"><i class="fa fa-euro"></i> {{project.rate}}</span>
+                                                            <span class="rate" ng-if="project.rate!=null"></i> {{project.rate}} {{project.currency}}</span>
 
                                                         </td>
                                                         <td class="project-status">
@@ -311,7 +311,7 @@
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control input-lg fleft budgetlimit" style="width:92%" placeholder="0" ng-model="prate">
-                        <label class="fleft euro">€</label>
+                        <label class="fleft euro">{{projectcurrency}}</label>
                         <div class="clear-both"></div>
                     </div>
                 </div>
