--- a/app/partials/invoice.html
+++ b/app/partials/invoice.html
@@ -11,9 +11,6 @@
                    <h2><i class="fa fa-file"></i> Invoice</h2>
                    <ol class="breadcrumb">
                        <li>
-                           {{project_name}}
-                       </li>
-                       <li>
                            Invoice
                        </li>
                    </ol>
@@ -34,9 +31,9 @@
                                      <div class="col-md-8 p0">
                                          <div class="form-group fleft mr10 mb10">
                                              <div class="select-option select-project m-0" style="width: 150px;">
-                                                 <select class="select2">
-                                                     <option>2017</option>
-                                                     <option selected="selected">2016</option>
+                                                 <select select-two ng-model="year" ng-change="changeDate()">
+                                                     <option selected="selected">2017</option>
+                                                     <option >2016</option>
                                                      <option>2015</option>
                                                  </select>
                                              </div>
@@ -58,40 +55,44 @@
                                                        <td width="250" class="project-table-head">Date</td>
                                                        <td width="250" class="project-table-head">Billable Time</td>
                                                        <td width="250" class="project-table-head">Amount</td>
-                                                       <td width="300" class="project-table-head">Report</td>
-                                                       <td width="300" class="project-table-head">Invoice</td>
+                                                       <!-- <td width="300" class="project-table-head">Report</td>
+                                                       <td width="300" class="project-table-head">Invoice</td> -->
                                                        <td width="200" class="project-table-head">Status</td>
-                                                       <td width="50" class="project-table-head aright"></td>
+                                                       <td width="150" class="project-table-head aright"></td>
                                                    </tr>
 
-                                                   <tr>
+                                                   <tr ng-repeat="invoice in allInvoices" ng-class="invoice.paid?'done':''">
                                                        <td class="project-id">
-                                                           00101022
+                                                           {{invoice.id}}
                                                        </td>
                                                        <td class="project-title">
-                                                           <a href="#/invoicedetails">15.12.2016</a>
+                                                           <a href="#/invoicedetails">{{invoice.date}}</a>
                                                        </td>
                                                        <td class="project-estimation">
-                                                          <b>105 h</B>
+                                                          <b>{{invoice.billed_time}} h</B>
                                                        </td>
                                                        <td class="project-estimation">
-                                                          <b>€ 3208.25</B>
+                                                          <b>{{invoice.amount}} {{invoice.currency}}</B>
                                                        </td>
-                                                       <td class="project-pdf">
+                                                       <!-- <td class="project-pdf">
                                                          <a href="report-393305.pdf" target="_blank" download>report-393305.pdf</a>
                                                        </td>
                                                        <td class="project-pdf">
                                                          <a href="report-393305.pdf" target="_blank" download>invoice-393305.pdf</a>
+                                                       </td> -->
+                                                       <td class="project-status" ng-if="invoice.paid">
+                                                         <span class="label label-default label-nobg"><i class="fa fa-check"></i> paid</span>
                                                        </td>
-                                                       <td class="project-status">
-                                                         <span class="label label-default label-nobg"><img src="img/ellipsis.gif" width="15" height="15"> waiting</span>
+                                                       <td class="project-status" ng-if="!invoice.paid">
+                                                         <span class="label label-default label-nobg"> unpaid</span>
                                                        </td>
                                                        <td class="project-actions">
-                                                         <a href="#/invoicedetails" class="btn btn-white btn-sm"><i class="fa fa-ellipsis-h"></i></a>
+                                                        <a href="#/invoice/report/invoice/{{invoice.id}}" class="btn btn-white btn-sm"><i class="fa fa-search"></i></a>
+                                                         <a href="#/invoicedetails/{{invoice.id}}" class="btn btn-white btn-sm"><i class="fa fa-ellipsis-h"></i></a>
                                                        </td>
                                                    </tr>
 
-                                                   <tr class="">
+                                                   <!-- <tr class="">
                                                        <td class="project-id">
                                                            00101022
                                                        </td>
@@ -117,87 +118,8 @@
                                                          <a href="#/invoicedetails" class="btn btn-white btn-sm"><i class="fa fa-ellipsis-h"></i></a>
                                                        </td>
                                                    </tr>
-
-                                                   <tr class="done">
-                                                       <td class="project-id">
-                                                           00101022
-                                                       </td>
-                                                       <td class="project-title">
-                                                           <a href="#/invoicedetails">10.10.2016</a>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <b>160 h</B>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <b>€ 5151.00</B>
-                                                       </td>
-                                                       <td class="project-pdf">
-                                                         <a href="report-393305.pdf" target="_blank" download>report-393305.pdf</a>
-                                                       </td>
-                                                       <td class="project-pdf">
-                                                         <a href="report-393305.pdf" target="_blank" download>invoice-393305.pdf</a>
-                                                       </td>
-                                                       <td class="project-status">
-                                                         <span class="label label-default label-nobg"><i class="fa fa-check"></i> paid</span>
-                                                       </td>
-                                                       <td class="project-actions">
-                                                          <a href="#/invoicedetails" class="btn btn-white btn-sm"><i class="fa fa-ellipsis-h"></i></a>
-                                                       </td>
-                                                   </tr>
-
-                                                   <tr class="done">
-                                                       <td class="project-id">
-                                                           00101022
-                                                       </td>
-                                                       <td class="project-title">
-                                                           <a href="#/invoicedetails">24.09.2016</a>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <b>160 h</B>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <b>€ 6151.00</B>
-                                                       </td>
-                                                       <td class="project-pdf">
-                                                         <a href="report-393305.pdf" target="_blank" download>report-393305.pdf</a>
-                                                       </td>
-                                                       <td class="project-pdf">
-                                                         <a href="report-393305.pdf" target="_blank" download>invoice-393305.pdf</a>
-                                                       </td>
-                                                       <td class="project-status">
-                                                         <span class="label label-default label-nobg"><i class="fa fa-check"></i> paid</span>
-                                                       </td>
-                                                       <td class="project-actions">
-                                                          <a href="#/invoicedetails" class="btn btn-white btn-sm"><i class="fa fa-ellipsis-h"></i></a>
-                                                       </td>
-                                                   </tr>
-
-                                                   <tr class="done">
-                                                       <td class="project-id">
-                                                           00101022
-                                                       </td>
-                                                       <td class="project-title">
-                                                           <a href="#/invoicedetails">20.08.2016</a>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <b>160 h</B>
-                                                       </td>
-                                                       <td class="project-estimation">
-                                                          <b>€ 6151.00</B>
-                                                       </td>
-                                                       <td class="project-pdf">
-                                                         <a href="report-393305.pdf" target="_blank" download>report-393305.pdf</a>
-                                                       </td>
-                                                       <td class="project-pdf">
-                                                         <a href="report-393305.pdf" target="_blank" download>invoice-393305.pdf</a>
-                                                       </td>
-                                                       <td class="project-status">
-                                                         <span class="label label-default label-nobg"><i class="fa fa-check"></i> paid</span>
-                                                       </td>
-                                                       <td class="project-actions">
-                                                          <a href="#/invoicedetails" class="btn btn-white btn-sm"><i class="fa fa-ellipsis-h"></i></a>
-                                                       </td>
-                                                   </tr>
+ -->
+                                                  
 
                                                    </tbody>
                                                </table>
