--- a/app/partials/invoicedetails.html
+++ b/app/partials/invoicedetails.html
@@ -11,9 +11,6 @@
                    <h2><i class="fa fa-file"></i> Invoice Details</h2>
                    <ol class="breadcrumb">
                        <li>
-                           {{project_name}}
-                       </li>
-                       <li>
                            Invoice
                        </li>
                    </ol>
@@ -35,13 +32,14 @@
                                         <!-- buttons & team -->
                                         <div class="row">
                                             <div class="col-md-6 p0">
-                                                <a class="btn btn-default btn-bitbucket btn-m mr5" ng-click="backToProject()"><i class="fa fa-angle-left mr5"></i> back to invoices</a>
-                                                <a class="btn btn-default btn-bitbucket btn-m mr5 btnCopy" data-clipboard-text="{{currentUrl}}"><i class="fa fa-download mr5"></i> download pdf</a>
-                                                <a href="#" class="btn btn-primary btn-sm mr5"><i class="fa fa-arrow-right mr5"></i> pay now!</a>
-                                                <span class="status-paid mr5"><i class="fa fa-check mr5"></i> paid</span>
+                                                <a class="btn btn-default btn-bitbucket btn-m mr5" ng-click="backToInvoices()"><i class="fa fa-angle-left mr5"></i> back to invoices</a>
+                                                <a class="btn btn-default btn-bitbucket btn-m mr5 btnCopy" href="#/invoice/report/invoice/{{invoice.id}}"><i class="fa fa-search mr5"></i> see report</a>
+                                                <!-- <a class="btn btn-default btn-bitbucket btn-m mr5 btnCopy" data-clipboard-text="{{currentUrl}}"><i class="fa fa-download mr5"></i> download pdf</a> -->
+                                                <!-- <a href="#" class="btn btn-primary btn-sm mr5"><i class="fa fa-arrow-right mr5"></i> pay now!</a> -->
+                                                <span class="status-paid mr5" ng-if='invoice.paid'><i class="fa fa-check mr5"></i> paid</span>
                                             </div>
                                             <div class="col-md-6 p0 aright">
-                                              <h4>Invoices for navabi GmbH / Invoice #393305</h4>
+                                              <h4>Invoices for {{invoice.client}} / Invoice {{invoice.id}}</h4>
                                             </div>
                                         </div>
                                         <!-- end buttons & team -->
@@ -65,30 +63,31 @@
                                    <div class="col-md-6 p0">
                                      <div class="invoice-bill-to">
                                        <p>Billed To</p>
-                                       <h3 class="mb5">navabi GmbH</h3>
-                                       <p>Jülicher Str. 344</p>
-                                       <p>52070 Aachen</p>
+                                       <h3 class="mb5">{{invoice.client}}</h3>
+                                       <p>{{invoice.address.address}}</p>
+                                       <p>{{invoice.address.zipcode}} {{invoice.address.city}}</p>
                                      </div>
                                    </div>
                                    <div class="col-md-3 p0">
                                      <div class="invoice-meta">
                                        <span>Invoice ID</span>
-                                       <h2>393305</h2>
+                                       <h2  ng-if="invoice.billedFrom!='Tr'">{{invoice.id}}</h2>
+                                       <h2  ng-if="invoice.billedFrom =='Tr'">n.a</h2>
                                      </div>
 
                                      <div class="invoice-meta">
                                        <span>Client ID</span>
-                                       <h2>000001</h2>
+                                       <h2>{{invoice.client_id}}</h2>
                                      </div>
                                    </div>
                                    <div class="col-md-3 p0">
                                      <div class="invoice-meta">
                                        <span>Invoice Date</span>
-                                       <h2>Jan 13, 2017</h2>
+                                       <h2>{{invoice.enddate}}</h2>
                                      </div>
                                      <div class="invoice-meta">
                                        <span>VAT</span>
-                                       <h2>DE262739607</h2>
+                                       <h2>{{invoice.vat}}</h2>
                                      </div>
                                    </div>
 
@@ -97,7 +96,7 @@
 
                                  <!-- col-md-12 -->
                                  <div class="col-md-12" style="margin-top: 50px;">
-                                   <h2 class="mb20">Jan 13, 2017 - Feb 13, 2017</h2>
+                                   <h2 class="mb20">{{invoice.startdate}} - {{invoice.enddate}}</h2>
                                    <div class="project-list">
                                        <div class="table-responsive">
                                            <table class="table table-hover">
@@ -115,17 +114,17 @@
                                                          01
                                                      </td>
                                                      <td class="project-title">
-                                                         Frontend HTML CSS BOOTSTRAP
+                                                        {{invoice.description}}
                                                      </td>
                                                      <td class="project-estimation">
-                                                        40 €
+                                                        {{invoice.up}} {{invoice.currency}}
                                                      </td>
                                                      <td class="project-estimation">
-                                                        70 h
+                                                        {{invoice.billed_time}} h
                                                      </td>
 
                                                      <td class="project-actions">
-                                                       <b>2800.00 €</b>
+                                                       <b>{{invoice.amount}} {{invoice.currency}}</b>
                                                      </td>
                                                  </tr>
 
@@ -134,7 +133,7 @@
                                                      <td class="border"></td>
                                                      <td class="border"></td>
                                                      <td class="border">Discount</td>
-                                                     <td class="border aright">- 500.00 €</td>
+                                                     <td class="border aright">-{{invoice.discount}} {{invoice.currency}}</td>
                                                  </tr>
 
                                                  <tr>
@@ -142,15 +141,15 @@
                                                      <td class="border"></td>
                                                      <td class="border"></td>
                                                      <td class="border">Subtotal</td>
-                                                     <td class="border aright">2300.00 €</td>
+                                                     <td class="border aright">{{invoice.subTotal}} {{invoice.currency}}</td>
                                                  </tr>
 
                                                  <tr>
                                                      <td></td>
                                                      <td></td>
                                                      <td></td>
-                                                     <td>Tax 19%</td>
-                                                     <td class="aright">437.00 €</td>
+                                                     <td>Tax {{invoice.tax}}%</td>
+                                                     <td class="aright">{{invoice.taxamount}} {{invoice.currency}}</td>
                                                  </tr>
 
 
@@ -160,17 +159,17 @@
                                                      <td width="800" class="project-table-head"></td>
                                                      <td width="200" class="project-table-head"></td>
                                                      <td width="200" class="project-table-head">Grand Total</td>
-                                                     <td width="200" class="project-table-head aright">2737.00 €</td>
+                                                     <td width="200" class="project-table-head aright">{{invoice.grandTotal}} {{invoice.currency}}</td>
                                                  </tr>
                                                </tbody>
                                            </table>
                                        </div>
                                    </div>
-                                   <span>Please transfer the amount from <b>2737.00 €</b> until <b>Feb 25, 2017</b>.</span>
+                                   <span>Please transfer the amount from <b>{{invoice.grandTotal}} {{invoice.currency}}</b> until <b>{{invoice.limitdate}}</b>.</span>
                                  </div>
                                  <!--// col-md-12 -->
 
-                                 <div class="col-md-12 invoice-footer-area">
+                                 <div class="col-md-12 invoice-footer-area" ng-if="invoice.billedFrom == 'De'">
                                    <div class="col-md-3 p0">
                                      <div class="invoice-footer">
                                         <p>flexwork.io</p>
@@ -181,10 +180,10 @@
                                    </div>
                                    <div class="col-md-3 p0">
                                      <div class="invoice-footer">
-                                        <p>telephone +49 231 226 186 10</p>
-                                        <p>fax +49 231 226 186 48</p>
+                                        <p>phone: +49 231 226 186 10</p>
+                                        <p>fax: +49 231 226 186 48</p>
                                         <p>email: invoice@flexwork.io</p>
-                                        <p>internet: flexwork.io</p>
+                                        <p>web: flexwork.io</p>
                                      </div>
                                    </div>
                                    <div class="col-md-3 p0">
@@ -203,7 +202,42 @@
                                      </div>
                                    </div>
                                  </div>
-
+                                 <div class="col-md-12 invoice-footer-area" ng-if="invoice.billedFrom == 'Tr'">
+                                   <div class="col-md-3 p0">
+                                     <div class="invoice-footer">
+                                        <p>flexwork bilişim A.Ş.</p>
+                                        <p>Maslak Mah. Dereboyu 2 Cad. </p>
+                                        <p>Nurol Plaza No: 21/A</p>
+                                        <p>34398 Sarıyer İstanbul Turkey</p>
+                                      </div>
+                                   </div>
+                                   <div class="col-md-3 p0">
+                                     <div class="invoice-footer">
+                                        <p>phone: +90 850 532 60 75</p>
+                                        <p>mobile: +90 551 131 72 80</p>
+                                        <p>email: invoice@flexwork.io</p>
+                                        <p>web: flexwork.io</p>
+                                     </div>
+                                   </div>
+                                   
+                                   <div class="col-md-3 p0">
+                                     <div class="invoice-footer">
+                                        <p>Vergi Dairesi Maslak</p>
+                                        <p>Vergi 3880808616</p>
+                                        <p>Ticaret Sicil No: 59609-5</p>
+                                        <p>Mersis No: 038808061600019</p>
+                                     </div>
+                                   </div>
+                                   <div class="col-md-3 p0">
+                                     <div class="invoice-footer">
+                                        <p>Yapı Kredi Bankası - Mecidiyeköy Sube 082</p>                                                              
+                                        <p>IBAN TL:TR280006701000000049684255</p>
+                                        <p>IBAN EUR:TR100006701000000049684288</p>
+                                        <p>IBAN USD:TR850006701000000049684490</p>
+                                        <p>Swift: YAPITRISXXX</p>
+                                     </div>
+                                   </div>
+                                 </div>
                                </div>
                                <!-- main-->
 
