--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -146,26 +146,26 @@
                                     <div class="col-md-12">
                                         <!-- filter-->
                                         <div class="col-md-9 p0 pb10">
-                                          <ol class="cd-breadcrumb triangle" ng-model="$parent.selectedStatus" ng-change="filter()">
-                                            <li class="all current"><a href="#0">all active</a></li>
-                                            <li class=""><a href="#0">start</a></li>
-                                            <li class=""><a href="#0">estimation</a></li>
-                                            <li class=""><a href="#0">confirm</a></li>
-                                            <li class=""><a href="#0">production</a></li>
-                                            <li class=""><a href="#0">QA</a></li>
-                                            <li class=""><a href="#0">delivered</a></li>
-                                            <li class="all"><a href="#0">done</a></li>
+                                          <ol class="cd-breadcrumb triangle">
+                                            <li ng-class="selectedStatus=='all'? 'all current':'all'"><a ng-click="filter('all')">all active</a></li>
+                                            <li ng-class="selectedStatus==ticketStatus.Draft.status?'current':''"><a ng-click="filter(ticketStatus.Draft.status)">start</a></li>
+                                            <li ng-class="selectedStatus==ticketStatus.Estimation.status?'current':''"><a ng-click="filter(ticketStatus.Estimation.status)">estimation</a></li>
+                                            <li ng-class="selectedStatus==ticketStatus.Goproduction.status?'current':''"><a ng-click="filter(ticketStatus.Goproduction.status)">confirm</a></li>
+                                            <li ng-class="selectedStatus==ticketStatus.Production.status?'current':''"><a ng-click="filter(ticketStatus.Production.status)">production</a></li>
+                                            <li ng-class="selectedStatus==ticketStatus.Testing.status?'current':''"><a ng-click="filter(ticketStatus.Testing.status)">QA</a></li>
+                                            <li ng-class="selectedStatus==ticketStatus.Accept.status?'current':''"><a ng-click="filter(ticketStatus.Accept.status)">delivered</a></li>
+                                            <li ng-class="selectedStatus==ticketStatus.Done.status? 'all current':'all'"><a ng-click="filter(ticketStatus.Done.status)">done</a></li>
                                           </ol>
                                         </div>
                                         <!-- filter-->
                                         <div class="col-md-3 p0 pb10 bill-times bt-bar" >
                                           <div class="bill-estimation">
                                             <span class="est">Estimation</span>
-                                            <span class="esthours">27.5 h</span>
+                                            <span class="esthours">{{estimationTotal}} h</span>
                                           </div>
                                           <div class="bill-realtime">
                                             <span class="rt">Real Time</span>
-                                            <span class="rthours">30 h</span>
+                                            <span class="rthours">{{realtimeTotal}} h</span>
                                           </div>
                                         </div>
                                         <div style="clear:both;"></div>
@@ -183,7 +183,7 @@
                                                         <td width="800" class="project-table-head">
                                                           <div class="input-group project-search">
                                                               <i class="fa fa-search"></i>
-                                                              <input type="text" placeholder="Search by title" class="input-sm form-control" ng-model="$parent.searchWord" my-enter="filter()">
+                                                              <input type="text" placeholder="Search by title" class="input-sm form-control" ng-model="$parent.searchWord" any-key="filter(selectedStatus)">
                                                           </div>
                                                         </td>
                                                         <td width="100" class="project-table-head">Estimation</td>
@@ -728,6 +728,16 @@
                             </div>
 
                         </div>
+
+                        <div class="col-lg-12 mb20 mt20">
+                            <div class="col-xs-12 p0">
+                                <input  id="upfiles" name="Datei" type="file">
+                            </div>
+                            <div class="col-xs-12 p0 mt20">
+                                <a href="" class="btn btn-default btn-xs"><i class="fa fa-plus"></i> add more attachments</a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="modal-footer">
