new-release-modif

--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -916,7 +916,7 @@
                                </div><!--col-md-->
                             </div><!--row-->
                           </div>
-                          <div class="ibox-content mt15" ng-if="isclient">
+                         <!--  <div class="ibox-content mt15" ng-if="isclient">
                             <div class="row">
                                <div class="col-md-12">
                                  <h4>Connect Accounts</h4>
@@ -927,7 +927,7 @@
                                 </span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                           <!-- ibox-->
 
                       </div>
