--- a/app/css/style-external.css
+++ b/app/css/style-external.css
@@ -3591,3 +3591,22 @@ Add a counter to the multi-steps indicator
     padding-top: 34px;
   }
 }
+
+/*upload files*/
+.fileUpload {
+    position: relative;
+    overflow: hidden;
+    margin: 0px 0px 10px;
+}
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
