--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -742,7 +742,7 @@
                                 <input type="email" class="form-control" placeholder="Email" required="" ng-model="email">
                             </div>
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Password" required="" ng-model="password">
+                                <input type="text" class="form-control" placeholder="Password" required="" ng-model="password">
                             </div>
 
                             <div class="form-group m-0">
