--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -59,7 +59,7 @@
                                    <!--<li><a href="#" ><i class="fa fa-thumb-tack mr5" ></i> budgetlimit</a></li>-->
                                    <li><a ng-click="openKeybox()"><i class="fa fa-lock mr5"></i> keybox</a></li>
                                    <li><a data-target="#notifications" data-toggle="modal" ng-if="isclient"><i class="fa fa-bell mr5"></i> notifications</a></li>
-                                   <li><a data-target="#jira_link" data-toggle="modal" ng-if="isclient"><i class="fa fa-plug mr5"></i> connect jira</a></li>
+                                   <!-- <li><a data-target="#jira_link" data-toggle="modal" ng-if="isclient"><i class="fa fa-plug mr5"></i> connect jira</a></li> -->
                                  </ul>
                                 </div>
                             </div>
@@ -729,13 +729,14 @@
 
                         </div>
 
-                        <div class="col-lg-12 mb20 mt20">
-                            <div class="col-xs-12 p0">
-                                <input  id="upfiles" name="Datei" type="file">
+                        <div class="col-lg-12 mb20 mt20" ng-if="!isedit">
+                            <div class="fileUpload btn btn-primary btn-xs">
+                                <span><i class="fa fa-plus"></i> add attachment</span>
+                                <input class="upload" id="upfiles" name="Datei" type="file" multiple file-upload/>
                             </div>
-                            <div class="col-xs-12 p0 mt20">
-                                <a href="" class="btn btn-default btn-xs"><i class="fa fa-plus"></i> add more attachments</a>
-                            </div>
+                            <ul class="list-unstyled project-files">
+                                <li ng-repeat="file in ticketfiles" ><a class="ticketFile"><i class="fa fa-download"></i> {{file.name}}</a><button class="ticketFileTrash fxw-alert-delete" ng-click="deleteFileTicket($index)"><i class="fa fa-close"></i></button></li>
+                            </ul>
                         </div>
 
                     </div>
